welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:4: error: reassignment to val
{if (getX=19 && getY=1) {var x = 1}
         ^